--- a/frontend/personal-website/personal-website/package.json
+++ b/frontend/personal-website/personal-website/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:persoanl-website": "node dist/persoanl-website/server/server.mjs"
+    "serve:ssr:persoanl-website": "node dist/persoanl-website/server/server.mjs",
+    "frontend": "cd frontend/personal-website/personal-website"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +26,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-regular-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@ng-bootstrap/ng-bootstrap": "^17.0.1",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "express": "^4.18.2",
     "persoanl-website": "file:",
@@ -37,6 +40,7 @@
     "@angular-devkit/build-angular": "^18.2.2",
     "@angular/cli": "^18.2.2",
     "@angular/compiler-cli": "^18.2.0",
+    "@angular/localize": "^18.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.18.0",
