--- a/frontend/personal-website/personal-website/package.json
+++ b/frontend/personal-website/personal-website/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "persoanl-website",
+  "name": "personal-website",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,8 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:persoanl-website": "node dist/persoanl-website/server/server.mjs",
-    "frontend": "cd frontend/personal-website/personal-website"
+    "serve:ssr:personal-website": "node dist/personal-website/server/server.mjs"
   },
   "private": true,
   "dependencies": {
@@ -22,17 +21,16 @@
     "@angular/platform-server": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@angular/ssr": "^18.2.2",
-    "@fortawesome/fontawesome-svg-core": "^6.7.1",
-    "@fortawesome/free-brands-svg-icons": "^6.7.1",
-    "@fortawesome/free-regular-svg-icons": "^6.7.1",
-    "@fortawesome/free-solid-svg-icons": "^6.7.1",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.2",
     "express": "^4.18.2",
-    "persoanl-website": "file:",
+    "personal-website": "file:",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.14.5",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
