--- a/frontend/personal-website/personal-website/package.json
+++ b/frontend/personal-website/personal-website/package.json
@@ -27,11 +27,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@ng-bootstrap/ng-bootstrap": "^17.0.1",
     "@popperjs/core": "^2.11.8",
+    "@sweetalert2/ngx-sweetalert2": "^12.4.0",
     "bootstrap": "^5.3.2",
     "express": "^4.18.2",
     "personal-website": "file:",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.15.2",
+    "sweetalert2": "^11.15.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
