--- a/frontend/personal-website/personal-website/angular.json
+++ b/frontend/personal-website/personal-website/angular.json
@@ -41,7 +41,9 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [],
+            "scripts": [
+              "https://kit.fontawesome.com/9dd06d4010.js"
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
