--- a/frontend/personal-website/personal-website/angular.json
+++ b/frontend/personal-website/personal-website/angular.json
@@ -41,9 +41,7 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "https://kit.fontawesome.com/9dd06d4010.js"
-            ],
+            "scripts": [],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
